<resources>
    <string name="app_name">marketapp</string>


    <string name="tv_slides_msg_show">TOKOTO</string>
    <string name="tv_slides_msg_show_1">Welcome to <b>Tokoto,</b> Let\'s shop!</string>
    <string name="tv_slides_msg_show_2">We help people conect with store \n around United State of America</string>
    <string name="tv_slides_msg_show_3">We shop the easy way to shop. \n Just stay at home with us</string>

    <string name="btn_continue_show">Continue</string>


    <string name="tv_signin_msg_show_1">Sign In</string>
    <string name="tv_signin_msg_show_2">Welcome Back</string>
    <string name="tv_signin_msg_show_3">Sign in with you email and password \n or continue with social media</string>
    <string name="tv_signin_msg_show_4"><u>Forgot Password</u></string>
    <string name="tv_signin_msg_show_5">Don\'t have an account?</string>
    <string name="tv_signin_msg_show_6">Sign Up</string>
    <string name="cb_signin_msg">Remember me</string>

    <string name="title_et_email">Email</string>
    <string name="hint_et_email">Enter your email</string>

    <string name="title_et_password">Password</string>
    <string name="hint_et_password">Enter your password</string>

    <string name="title_et_confirmpassword">Confirm Password</string>
    <string name="hint_et_confirmpassword">Re-enter your password</string>

    <string name="title_et_firstname">First Name</string>
    <string name="hint_et_firstname">Enter your first name</string>

    <string name="title_et_lastname">Last Name</string>
    <string name="hint_et_lastname">Enter your last name</string>

    <string name="title_et_phonenumber">Phone Number</string>
    <string name="hint_et_phonenumber">Enter your phone number</string>

    <string name="title_et_address">Address</string>
    <string name="hint_et_address">Enter your address</string>


    <string name="hint_et_search">\tSearch product</string>


    <string name="tv_sacc_msg_show_1">Profile</string>
    <string name="btn_sacc_show_1">\t\t\tMy Account</string>
    <string name="btn_sacc_show_2">\t\t\tNotifications</string>
    <string name="btn_sacc_show_3">\t\t\tSettings</string>
    <string name="btn_sacc_show_4">\t\t\tHelp Center</string>
    <string name="btn_sacc_show_5">\t\t\tLog Out</string>


    <string name="tv_signup1_msg_show_1">Sign Up</string>
    <string name="tv_signup1_msg_show_2">Register Account</string>
    <string name="tv_signup1_msg_show_3">Complete your details or continue \n with social media</string>
    <string name="tv_signup1_msg_show_4">By continuing your confirm that you agree \n with our Term and Condition</string>


    <string name="tv_signup2_msg_show_1">Sign Up</string>
    <string name="tv_signup2_msg_show_2">Complete Profile</string>
    <string name="tv_signup2_msg_show_3">Complete your details or continue \n with social media</string>

    <string name="tv_systemindex_msg_show_1">Popular Garments</string>
    <string name="tv_systemindex_msg_show_2">See More</string>

    <string name="tv_systemindex_msg_show_3">Smartphone</string>
    <string name="tv_systemindex_msg_show_4">Fashion</string>
    <string name="tv_systemindex_msg_show_5">Special for you</string>
    <string name="tv_systemindex_msg_show_6">Cashback 20%</string>
    <string name="tv_systemindex_msg_show_7">Flash \n Deal</string>
    <string name="tv_systemindex_msg_show_8">Bill</string>
    <string name="tv_systemindex_msg_show_9">Game</string>
    <string name="tv_systemindex_msg_show_10">Daily \n Gift</string>
    <string name="tv_systemindex_msg_show_11">More</string>


    <string name="tv_garments_detail_msg_show_1">4.5<b>  </b></string>
    <string name="tv_garments_detail_msg_show_2">Loading…</string>
    <string name="btn_garments_detail_msg_show">Add to Chart</string>



    <string name="tv_ls_msg_show_1">Login Success</string>
    <string name="tv_ls_msg_show_2">Login Success</string>
    <string name="btn_continue_ls_show">Back to home</string>


    <string name="alert_password">Passwords Unequals</string>
    <string name="alert_empty_fields">Empty Fields</string>
    <string name="alert_user_exist">The user with that email already exists</string>
    <string name="alert_user_successfully_registed">User successfully registered</string>
    <string name="alert_user_invalid_data">Verify your data and try again</string>

</resources>