<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white"
    tools:context=".SignInActivityView">

    <TextView
        android:id="@+id/tv_signin_msg_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/muli"
        android:text="@string/tv_signin_msg_show_1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_signin_msg_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/muli_semi_bold"
        android:text="@string/tv_signin_msg_show_2"
        android:textColor="@color/app_black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin_msg_1" />

    <TextView
        android:id="@+id/tv_signin_msg_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/muli"
        android:text="@string/tv_signin_msg_show_3"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin_msg_2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"

        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/title_et_email"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin_msg_3"
        app:placeholderText="@string/hint_et_email"
        app:prefixText="\t">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/mail"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout2"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/title_et_password"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:placeholderText="@string/hint_et_password"
        app:prefixText="\t">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/lock"
            android:inputType="numberPassword"
            android:maxLength="8" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_signin_msg_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/muli"
        android:text="@string/tv_signin_msg_show_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <CheckBox
        android:id="@+id/cb_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/app_gray"
        android:fontFamily="@font/muli"
        android:text="@string/cb_signin_msg"
        android:textColor="@color/app_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/btn_signup1_continue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/app_orange"
        android:fontFamily="@font/muli_semi_bold"
        android:text="@string/btn_continue_show"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_signin" />

    <ImageView
        android:id="@+id/img_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/img_facebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup1_continue"
        app:srcCompat="@drawable/google_icon" />

    <ImageView
        android:id="@+id/img_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/img_twitter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_google"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup1_continue"
        app:srcCompat="@drawable/facebook_2" />

    <ImageView
        android:id="@+id/img_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_facebook"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup1_continue"
        app:srcCompat="@drawable/twitter" />

    <TextView
        android:id="@+id/tv_signin_msg_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/muli"
        android:text="@string/tv_signin_msg_show_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_signin_msg_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <TextView
        android:id="@+id/tv_signin_msg_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli"
        android:text="@string/tv_signin_msg_show_6"
        android:textColor="@color/app_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_signin_msg_5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>